# Fallout_4_Transition_Layer

./: .gitignore  .gitmodules  F4SE_Types.h  Plugin.cpp  aSWMultiplexer.slnx  aSWMultiplexer.vcxproj  aSWMultiplexer.vcxproj.filters  commonlibprob.cpp  config.cpp  config.hpp  csv.cpp  csv_loader.cpp  diagnostics.cpp  diagnostics.h  identity.h  injector.cpp  injector.hpp  log.cpp  log.hpp  main.cpp  mapping.cpp  mapping.hpp  pch.cpp  pch.h  records.hpp  relocations.hpp  runtime_hooks.cpp  runtime_hooks.hpp  scanner.cpp  scanner.hpp  visibility.hpp
CSVBuilder/csvbuilder/: build_csv.cpp  csvbuilder.cpp  csvbuilder.sln  csvbuilder.vcxproj  csvbuilder.vcxproj.filters
Docs/: Multiplexer.ini  aSWMultiplexer_FAQ_CommonMistakes.txt  aSWMultiplexer_quickstartguide.txt  aSWMultiplexer_readme.txt  csvbuilder.ini  csvbuilder_readme.txt  example_loadorder.txt
Dummy Slots/: Dummy_Keywords_02.esp
Plugin/aSWMultiplexer/: CMakeLists.txt  Plugin.cpp  config.cpp  config.hpp  csv.hpp  csv_loader.hpp  diagnostics.h  identity.cpp  injector.cpp  injector.hpp  mapping.hpp  scanner.cpp  scanner.hpp  test.cpp  utils.cpp  utils.hpp  visibility.cpp
aSWMultiplexer/x64/Release/: aSWMultiplexer.dll.recipe  aSWMultiplexer.iobj  aSWMultiplexer.ipdb
